applications/assignmentRules/objects/A1__c.object
<CustomObject>
    <description>Test1</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F1__c</fullName>
        <description>test</description>
        <label>F1</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Test2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>A1</label>
    <nameField>
        <label>A1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rule2</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>inserted validation for rule2</errorMessage>
    </validationRules>
</CustomObject>